fix: overflow adjusts and loading api

--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,7 @@
   display: flex;
   flex-direction: column;
   font-family: "Poppins", sans-serif;
-  width: 100vw;
+  width: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
